# gate

./: CMakeLists.txt  NewProject.jucer  TEST ENVIRONMENT.filtergraph
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-VST.plist
Builds/MacOSX/Gate And Key.xcodeproj/: project.pbxproj
Builds/MacOSX/Gate And Key.xcodeproj/project.xcworkspace/xcuserdata/zacharyhalaby.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Gate And Key.xcodeproj/xcuserdata/zacharyhalaby.xcuserdatad/xcschemes/: Gate And Key (AU).xcscheme  Gate And Key (All).xcscheme  Gate And Key (Shared Code).xcscheme  Gate And Key (VST).xcscheme  xcschememanagement.plist
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
